--- a/dredge-python/notebook/ap_registration.ipynb
+++ b/dredge-python/notebook/ap_registration.ipynb
@@ -317,9 +317,10 @@
     }
    ],
    "source": [
-    "mu.show_raster(raster, depth_bin_edges, time_bin_edges, plt, vmax=50, aspect=\"auto\")\n",
+    "fig, ax = plt.subplots()\n",
+    "im = mu.show_raster(raster, depth_bin_edges, time_bin_edges, ax, vmax=50, aspect=\"auto\")\n",
     "mu.plot_me_traces(motion_est, plt, c=\"r\")\n",
-    "plt.colorbar(label=\"amplitude (uv)\")\n",
+    "plt.colorbar(im, ax=ax, label=\"amplitude (uv)\")\n",
     "plt.title(\"unregistered raster\")\n",
     "plt.xlabel(\"time (s)\")\n",
     "plt.ylabel(\"depth (um)\")"
@@ -647,7 +648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
